update OpenAPI specification, add dto mapper
